--- a/templates/gbook.html
+++ b/templates/gbook.html
@@ -58,7 +58,7 @@ obj.id='selected'
   </div>
 </header>
 <article>
-  <h1 class="t_nav"><span>像“草根”一样，紧贴着地面，低调的存在，冬去春来，枯荣无恙。</span><a href="{% url 'index' %}" class="n1">网站首页</a><a href="{% url 'gbook' %}" class="n2">留言板</a></h1>
+  <h1 class="t_nav"><span>上帝从不抱怨人们的愚昧，人们却抱怨上帝的不公平！</span><a href="{% url 'index' %}" class="n1">网站首页</a><a href="{% url 'gbook' %}" class="n2">留言板</a></h1>
   <div class="ab_box">
     <div class="leftbox">
       <div class="newsview">
@@ -111,7 +111,7 @@ obj.id='selected'
       <div class="weixin">
         <h2 class="hometitle">微信关注</h2>
         <ul>
-          <img src="{% static 'images/wx.jpg' %}">
+          暂无
         </ul>
       </div>
     </div>
